# xmas

./: .gitignore  .ocamlformat  Gemfile  README.md  dune-project  gen.sh  ocaml  res  test  xmas.install
.github/workflows/: main.yml
2016/day13/: dune  main.ml
day01/: dune  main.ml
day02/: dune  main.ml
day03/: dune  main.ml
day04/: dune  main.ml
day05/: dune  main.ml
day06/: dune  main.ml
day07/: dune  main.ml
day08/: dune  main.ml
day09/: dune  main.ml
day1/: dune  main.ml
day10/: dune  main.ml
day11/: dune  main.ml
day12/: dune  main.ml
day13/: dune  main.ml
day14/: dune  main.ml
day15/: dune  main.ml
day16/: dune  main.ml
day17/: dune  main.ml
day18/: dune  main.ml
day19/: dune  main.ml
day20/: dune  main.ml
day21/: dune  main.ml
day22/: dune  main.ml
day23/: dune  main.ml
day24/: alu.ml  dune  main.ml
day25/: dune  main.ml
lib/: benchmark.ml  benchmark.mli  coordinate.ml  dune  enum.ml  enum.mli  exc.ml  fn.ml  func.ml  func.mli  grid.ml  integer.ml  interval.ml  option.ml  parse.ml  parse.mli  parsing.ml  priority_queue.ml  priority_queue.mli  seq.ml  str.ml  text.ml  timing.ml
test/: dune
test/day01.t/: run.t
test/day1.t/: run.t
test/day10.t/: run.t
test/day11.t/: run.t
test/day12.t/: run.t
test/day13.t/: run.t
test/day14.t/: run.t
test/day15.t/: run.t
test/day16.t/: run.t
test/day17.t/: run.t
test/day18.t/: run.t
test/day19.t/: run.t
test/day20.t/: run.t
test/day21.t/: run.t
test/day22.t/: run.t
test/day23.t/: run.t  test
test/day24.t/: run.t
test/day25.t/: run.t
(+182 files in other folders)
