(cram
 (applies_to day10)
 (deps %{bin:day10}))

(cram
 (applies_to day11)
 (deps %{bin:day11}))

(cram
 (applies_to day12)
 (deps %{bin:day12}))

(cram
 (applies_to day13)
 (deps %{bin:day13}))

(cram
 (applies_to day14)
 (deps %{bin:day14}))

(cram
 (applies_to day15)
 (deps %{bin:day15}))

(cram
 (applies_to day16)
 (deps %{bin:day16}))

(cram
 (applies_to day17)
 (deps %{bin:day17}))

(cram
 (applies_to day18)
 (deps %{bin:day18}))
